--- a/src/pages/styles/NotFound.css
+++ b/src/pages/styles/NotFound.css
@@ -1,4 +1,4 @@
-.Home {
+.NotFound {
   width: 100%;
   min-height: calc(100vh - 60px);
   background: url('../../images/stars.svg'), #1b1b25;
@@ -8,17 +8,6 @@
 
   display: flex;
   align-items: center;
-}
-
-.Home__col {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
-
-@media screen and (min-width: 768px) {
-  .Home__col {
-    align-items: flex-start;
-  }
+  flex-direction: column;
 }
