--- a/src/pages/styles/Badges.css
+++ b/src/pages/styles/Badges.css
@@ -1,12 +1,12 @@
 .Badges__hero {
   width: 100%;
   padding: 2rem 0;
-  background: url('../../images/stars.svg'), #1B1B25;
+  background: url('../../images/stars.svg'), #1b1b25;
   background-repeat: repeat;
   margin-bottom: 1rem;
 }
 
-.Badges__hero>.Badges__container {
+.Badges__hero > .Badges__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,6 @@
   width: 100%;
   max-width: 580px;
   margin: 0 auto;
-  padding: 0 1rem;
 }
 
 .Badges_conf-logo {
